modificado index.html y cambios menores en empresa.xml y empresa.dtd

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html lang="es">
 	<head>
-		<title>UD6: Proyecto dirigido a la validación, formateo y transformación de documentos XML</title>
+		<title>Tech Solutions S.A.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,15 +30,14 @@
 		<section id="main" >
 			<div class="inner">
 				<header class="major special">
-					<h1>Nombre de la web</h1>
-					<p>Descripción de la web</p>
+					<h1>Tech Solutions S.A.</h1>
+					<p>¡Hola! Somos Tech Solutions, una empresa dedicada a ofrecer soluciones tecnológicas innovadoras para empresas de todos los tamaños.</p>
 				</header>
 				<!-- imagen carácterística de la empresa o asociación -->
 				<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
 				<!-- texto introductorio en el que se detalle lo que hace la empresa o asociación -->
-				<p>Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan.</p>
-				<p>Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan commodo odio cubilia ac eu interdum placerat placerat arcu commodo lobortis adipiscing semper ornare pellentesque.</p>
-				<p>Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet blandit adipiscing arcu ante.</p>
+				<p>En Tech Solutions, nos especializamos en el desarrollo de software personalizado, consultoría IT y soporte técnico integral. Nuestro objetivo es ayudar a las empresas a optimizar sus procesos mediante soluciones tecnológicas innovadoras y eficientes.</p>
+				<p>Contamos con un equipo de expertos altamente capacitados que trabajan en estrecha colaboración con nuestros clientes para entender sus necesidades y ofrecer soluciones a medida que impulsen su crecimiento y éxito en el mercado digital.</p>
 			</div>
 		</section>
 
@@ -46,7 +45,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<div class="copyright">
-					&copy; 202X Integrantes del grupo
+					&copy; 2025 Henri Tejada & Luis Olazabal. All rights reserved.
 					<ul class="icons">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -55,7 +54,7 @@
 						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
 					</ul>
-					Datos de la empresa o asosciación
+					Datos de la empresa: Tech Solutions S.A., Av. Innovación 123, Ciudad Tecnológica, Futurolandia. Teléfono: +123 456 7890. Email:Info@techsolutions.es
 				</div>
 			</div>
 		</footer>
