xsd introducido, cambios en los catalogos descripciones de productos y servicios html, aportes de estructuración en xml.

--- a/web/contacto.html
+++ b/web/contacto.html
@@ -15,7 +15,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<a href="../index.html" class="logo">Nombre de la web</a>
+				<a href="../index.html" class="logo">Tech Solutions S.A</a>
 				<nav id="nav">
 					<a href="../index.html">Página Principal</a>
 					<a href="catalogo_1.html">Catálogo 1</a>
