--- a/web/catalogo_1.html
+++ b/web/catalogo_1.html
@@ -15,7 +15,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<a href="../index.html" class="logo">Nombre de la web</a>
+				<a href="../index.html" class="logo">Tech Solutions S.A</a>
 				<nav id="nav">
 					<a href="../index.html">Página Principal</a>
 					<a href="#">Catálogo 1</a>
@@ -45,12 +45,12 @@
 						<tbody>
 							<tr>
 								<td><img src="../images/diamante1.jpg" alt="producto 1" width="100" height="100"></td>
-								<td>Producto 1</td>
-								<td>Descripción del producto 1:
+								<td>Desarrollo de Software</td>
+								<td>Creación de aplicaciones personalizadas para empresas.
 									<ul>
-										<li>Dolor pulvinar etiam magna etiam.</li>
-										<li>Sagittis adipiscing lorem eleifend.</li>
-										<li>Felis enim feugiat dolore viverra.</li>
+										<li>Optimización de procesos críticos de negocio.</li>
+										<li>Arquitectura escalable y de alta disponibilidad</li>
+										<li>Interfaz intuitiva para usuarios finales.</li>
 									</ul>
 								
 								</td>
@@ -58,12 +58,24 @@
 							</tr>
 							<tr>
 								<td><img src="../images/diamante2.jpg" alt="producto 2" width="100" height="100"></td>
-								<td>Producto 2</td>
-								<td>Descripción del producto 2:
+								<td>Consultoría IT</td>
+								<td>Asesoramiento en estrategias tecnológicas y optimización de recursos.
 									<ul>
-										<li>Dolor pulvinar etiam magna etiam.</li>
-										<li>Sagittis adipiscing lorem eleifend.</li>
-										<li>Felis enim feugiat dolore viverra.</li>
+										<li>Análisis profundo de vulnerabilidades.</li>
+										<li>Cumplimiento normativo de protección de datos</li>
+										<li>Soporte preventivo 24/7.</li>
+									</ul>
+								</td>
+								<td>37.44</td>
+							</tr>
+							<tr>
+								<td><img src="../images/diamante2.jpg" alt="producto 2" width="100" height="100"></td>
+								<td>Soporte Técnico</td>
+								<td>Asistencia y mantenimiento de sistemas informáticos.
+									<ul>
+										<li>Sincronización instantánea en múltiples sedes.</li>
+										<li>Recuperación de datos ante desastres (DRP).</li>
+										<li>Control total de permisos de usuario.</li>
 									</ul>
 								</td>
 								<td>37.44</td>
