--- a/web/catalogo_2.html
+++ b/web/catalogo_2.html
@@ -15,7 +15,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<a href="../index.html" class="logo">Nombre de la web</a>
+				<a href="../index.html" class="logo">Tech Solutions S.A</a>
 				<nav id="nav">
 					<a href="../index.html">Página Principal</a>
 					<a href="catalogo_1.html">Catálogo 1</a>
@@ -34,52 +34,41 @@
 				</header>
 				<div class="box">
 					<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="../images/pic01.jpg" alt="" /></a>				
-						<h3>Producto 1</h3>
-						<strong>Descripción del producto 1:</strong>
+						<h3>AppGestor</h3>
+						<strong>Software de gestión empresarial integral.</strong>
 						<ul>
-							<li>Dolor pulvinar etiam magna etiam.</li>
-							<li>Sagittis adipiscing lorem eleifend.</li>
-							<li>Felis enim feugiat dolore viverra.</li>
+							<li>Optimizacion de flujos de trabajo internos.</li>
+							<li>Control de inventario y facturación automatizada</li>
+							<li>Generacion de reportes analiticos en tiempo real.</li>
 						</ul>
 						<span>Precio: 23.45</span>
 						<a href="#" class="button fit">Más información</a>
 				</div>
 				<div class="box">
 					<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="../images/pic02.jpg" alt="" /></a>				
-						<h3>Producto 2</h3>
-						<strong>Descripción del producto 2:</strong>
+						<h3>DataSecure</h3>
+						<strong>Solución avanzada de seguridad de datos.</strong>
 						<ul>
-							<li>Dolor pulvinar etiam magna etiam.</li>
-							<li>Sagittis adipiscing lorem eleifend.</li>
-							<li>Felis enim feugiat dolore viverra.</li>
+							<li>Encriptacion avanzada de bases de datos corporativas.</li>
+							<li>Sistema de detección de intreusiones y firewalls activos.</li>
+							<li>Copias de seguridad automáticas en espejos externos.</li>
 						</ul>
 						<span>Precio: 33.45</span>
 						<a href="#" class="button fit">Más información</a>
 				</div>
 				<div class="box">
 					<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="../images/pic03.jpg" alt="" /></a>				
-						<h3>Producto 3</h3>
-						<strong>Descripción del producto 3:</strong>
+						<h3>CloudSync</h3>
+						<strong>Plataforma de sincronización y almacenamiento en la nube.</strong>
 						<ul>
-							<li>Dolor pulvinar etiam magna etiam.</li>
-							<li>Sagittis adipiscing lorem eleifend.</li>
-							<li>Felis enim feugiat dolore viverra.</li>
+							<li>Sincronización de archivos en múltiples dispositivos.</li>
+							<li>Acceso remoto seguro mediante protocolos VPN.</li>
+							<li>Colabroación en vivo sobre documentos compartidos.</li>
 						</ul>
 						<span>Precio: 63.45</span>
 						<a href="#" class="button fit">Más información</a>
 				</div>	
-				<div class="box">
-					<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="../images/pic04.jpg" alt="" /></a>				
-						<h3>Producto 4</h3>
-						<strong>Descripción del producto 4:</strong>
-						<ul>
-							<li>Dolor pulvinar etiam magna etiam.</li>
-							<li>Sagittis adipiscing lorem eleifend.</li>
-							<li>Felis enim feugiat dolore viverra.</li>
-						</ul>
-						<span>Precio: 29.45</span>
-						<a href="#" class="button fit">Más información</a>
-				</div>	
+					
 			</div>
 		</section>
 
