añadido xslt para el primer catalogo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<a href="#" class="logo">Nombre de la web</a>
 				<nav id="nav">
 					<a href="#">Página Principal</a>
-					<a href="web/catalogo_1.html">Catálogo 1</a>
+					<a href="xml/empresa.xml">Catálogo 1</a>
 					<a href="web/catalogo_2.html">Catálogo 2</a>
 					<a href="web/contacto.html">Contacto</a>								
 				</nav>
