implementacion de 6 articulos con todos sus datos, inclusion de descripcion detalladas , imagenes relaticas y calculos matematicos iva mediante xslt, creacion de dos vicualizaciones distintas, una basada en tablas y otra en bloques, organizacion por directorios indepentientes con rutas relativas corregidas.

--- a/index.html
+++ b/index.html
@@ -1,71 +1,44 @@
 <!DOCTYPE HTML>
-<!--
-	Base de la plantilla creada por TEMPLATED y adapatada para la realización del
-	Proyecto dirigido a la validación, formateo y transformación de documentos XML
--->
 <html lang="es">
-	<head>
-		<title>Tech Solutions S.A.</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+    <head>
+        <title>Tech Solutions S.A.</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+    </head>
+    <body>
+        <header id="header">
+            <div class="inner">
+                <a href="index.html" class="logo">Tech Solutions</a>
+                <nav id="nav">
+                    <a href="index.html">Inicio</a>
+                    <a href="xml/empresa.xml">CATÁLOGO TABLA</a>
+                    <a href="xml2/empresa_v2.xml">Catálogo Categorías</a>
+                    <a href="web/contacto.html">Contacto</a>
+                </nav>
+            </div>
+        </header>
 
-	</head>
-	<body>
+        <section id="main">
+            <div class="inner">
+                <header class="major special">
+                    <h1>Tech Solutions S.A.</h1>
+                    <p>Soluciones tecnológicas innovadoras para empresas.</p>
+                </header>
+                <a href="#" class="image fit"><img src="assets/images/pic11.jpg" alt="Tech Solutions" /></a>
+                <p>Bienvenido a nuestro portal corporativo. Aquí encontrarás nuestro catálogo completo de productos y servicios gestionados mediante tecnología XML.</p>
+            </div>
+        </section>
 
-		<!-- Header -->
-		<header id="header">
-			<div class="inner">
-				<a href="#" class="logo">Nombre de la web</a>
-				<nav id="nav">
-					<a href="#">Página Principal</a>
-					<a href="xml/empresa.xml">Catálogo 2</a>
-					<a href="web/catalogo_2.html">Catálogo 2</a>
-					<a href="web/contacto.html">Contacto</a>								
-				</nav>
-			</div>
-		</header>
-		<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+        <footer id="footer">
+            <div class="inner">
+                <div class="copyright">
+                    &copy; 2026 Tech Solutions S.A. Todos los derechos reservados.
+                </div>
+            </div>
+        </footer>
 
-		<!-- Main -->
-		<section id="main" >
-			<div class="inner">
-				<header class="major special">
-					<h1>Tech Solutions S.A.</h1>
-					<p>¡Hola! Somos Tech Solutions, una empresa dedicada a ofrecer soluciones tecnológicas innovadoras para empresas de todos los tamaños.</p>
-				</header>
-				<!-- imagen carácterística de la empresa o asociación -->
-				<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
-				<!-- texto introductorio en el que se detalle lo que hace la empresa o asociación -->
-				<p>En Tech Solutions, nos especializamos en el desarrollo de software personalizado, consultoría IT y soporte técnico integral. Nuestro objetivo es ayudar a las empresas a optimizar sus procesos mediante soluciones tecnológicas innovadoras y eficientes.</p>
-				<p>Contamos con un equipo de expertos altamente capacitados que trabajan en estrecha colaboración con nuestros clientes para entender sus necesidades y ofrecer soluciones a medida que impulsen su crecimiento y éxito en el mercado digital.</p>
-			</div>
-		</section>
-
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<div class="copyright">
-					&copy; 2025 Henri Tejada & Luis Olazabal. All rights reserved.
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
-					</ul>
-					Datos de la empresa: Tech Solutions S.A., Av. Innovación 123, Ciudad Tecnológica, Futurolandia. Teléfono: +123 456 7890. Email:Info@techsolutions.es
-				</div>
-			</div>
-		</footer>
-
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
-
-
-	</body>
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
