--- a/web/catalogo_2.html
+++ b/web/catalogo_2.html
@@ -18,7 +18,7 @@
 				<a href="../index.html" class="logo">Tech Solutions S.A</a>
 				<nav id="nav">
 					<a href="../index.html">Página Principal</a>
-					<a href="catalogo_1.html">Catálogo 1</a>
+					<a href="../xml/empresa.xml">Catálogo 1</a>
 					<a href="#">Catálogo 2</a>
 					<a href="contacto.html">Contacto</a>
 				</nav>
