--- a/web/contacto.html
+++ b/web/contacto.html
@@ -13,8 +13,8 @@
                 <a href="../index.html" class="logo">Tech Solutions</a>
                 <nav id="nav">
                     <a href="../index.html">Inicio</a>
-                    <a href="../xml/empresa.xml">Catálogo Tabla</a>
-                    <a href="../xml2/empresa_v2.xml">Catálogo Categorías</a>
+                    <a href="../xml/empresaplantilla1.xml">Catálogo Tabla</a>
+                    <a href="../xml/empresaplantilla2.xml">Catálogo Categorías</a>
                     <a href="contacto.html">Contacto</a>
                 </nav>
             </div>
