--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h1>Tech Solutions S.A.</h1>
                     <p>Soluciones tecnológicas innovadoras para empresas.</p>
                 </header>
-                <a href="#" class="image fit"><img src="assets/images/pic11.jpg" alt="Tech Solutions" /></a>
+                <a href="#" class="image fit"><img src="../images/pic11.jpg" alt="Tech Solutions" /></a>
                 <p>Bienvenido a nuestro portal corporativo. Aquí encontrarás nuestro catálogo completo de productos y servicios gestionados mediante tecnología XML.</p>
             </div>
         </section>
