--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                 <a href="index.html" class="logo">Tech Solutions</a>
                 <nav id="nav">
                     <a href="index.html">Inicio</a>
-                    <a href="xml/empresaplantilla1.xml">Catálogo Tabla</a>
-                    <a href="xml/empresaplantilla2.xml">Catálogo Categorías</a>
+                    <a href="../xml/empresaplantilla1.xml">Catálogo Tabla</a>
+                    <a href="../xml/empresaplantilla2.xml">Catálogo Categorías</a>
                     <a href="web/contacto.html">Contacto</a>
                 </nav>
             </div>
